--- a/paper/references.bib
+++ b/paper/references.bib
@@ -71,4 +71,11 @@
     doi = {10.21105/joss.01686},
   }  
   
-  
+
+@Misc{citeABC,
+    author = {{ABC News}},
+    title = {How 538's Pollster Ratings Work},
+    year = {2024},
+    url = {https://abcnews.go.com/538/538s-pollster-ratings-work/story?id=105398138},
+    note = {Accessed: 2024-11-04}
+}
