--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -37,15 +37,13 @@ library(readr)
 
 # Introduction
 
-The 2024 United States presidential election, the 60th quadrennial election, is scheduled for November 5, 2024. The stakes are high, as the outcome will shape domestic policies and impact international relations, with effects on trade, climate change, and security. In recent years, the domestic political landscape has changed significantly, marked by rising homelessness, income inequality, and social unrest. Alt-right movements increasingly target women's rights, minority rights, and immigration policies, leading to deep societal divisions. The current Democratic administration faces criticism for not addressing these pressing issues, with widespread protests against U.S. foreign involvement and the erosion of reproductive rights. Protests around police brutality and anti-immigration sentiments have also surfaced, reflecting the polarized nature of contemporary American society.
+The 2024 United States presidential election, is scheduled for November 5, 2024. The stakes are high, as the outcome will shape domestic policies and impact international relations, with effects on trade, climate change, and security. In recent years, the domestic political landscape has changed significantly, marked by rising homelessness, income inequality, and social unrest. Alt-right movements increasingly target women's rights, minority rights, and immigration policies, leading to deep societal divisions. The current Democratic administration faces criticism for not addressing these pressing issues, with widespread protests against U.S. foreign involvement and the erosion of reproductive rights. Protests around police brutality and anti-immigration sentiments have also surfaced, reflecting the polarized nature of contemporary American society.
 
-The primary candidates in this election, Democratic incumbent Kamala Harris and former Republican president Donald Trump, are expected to engage in a tight race, with polling indicating that the results could be very close. Swing states—those that do not consistently vote for one party—are vital in determining the overall outcome, as their electoral votes can sway the final result. Seven important swing states—Arizona, Nevada, Michigan, Georgia, Wisconsin, Pennsylvania, and North Carolina—are expected to be battlegrounds in this election, making their polling data essential for accurate forecasts.
+The primary candidates in this election, Democratic vice president Kamala Harris and former Republican president Donald Trump, are expected to engage in a tight race, with polling indicating that the results could be very close. Swing states—those that do not consistently vote for one party—are vital in determining the overall outcome, as their electoral votes can sway the final result. This year's swing states are: Nevada, Michigan, Georgia, Wisconsin, Pennsylvania, and North Carolina. They expected to be battlegrounds in this election, making their polling data essential for accurate forecasts.
 
-This paper focuses on forecasting the election outcome by employing the "poll of polls" method, utilizing data from FiveThirtyEight, along with historical data from the 2016 Clinton vs. Trump election and the 2020 Trump vs. Biden election. A Bayesian updating and Monte Carlo Simulations are created to predict the winner of the election outcome based on the popular vote across these swing states[some more details for what was done?]. The estimand in this analysis is the probability distribution of Harris's win percentage, derived from current polling data and historical election results. The model predicted that Harris would win, and [add details to result]
+This paper focuses on forecasting election outcomes by employing the "poll of polls" method, utilizing data from FiveThirtyEight. A Bayesian hierarchical model and Monte Carlo Simulations have been used to predict the winner of the election based on the electoral college vote, and quantify how close the election actually is. The estimand in this analysis is the proportion of seats Donald Trump will win in the 2024 election. Using the estimand we can conclude election results. Assuming Donald Trump's loss is Kamala Harris' win, she has around a 66% chance of winning this election. 
 
-Accurate forecasting of election outcomes is vital for several reasons. It enhances democratic engagement by informing voters about potential results, which encourages active participation in the electoral process. Furthermore, political campaigns can leverage these forecasts to tailor their strategies, optimize resource allocation, and concentrate efforts on pivotal swing states that may determine the election's outcome. Analyzing polling data also reveals trends in voter sentiment, providing valuable insights into the electorate's priorities and concerns that can inform policy discussions. Ultimately, the findings from this study can improve the accuracy of predictions in a political landscape characterized by rapid change and polarization, thereby enhancing the relevance and reliability of electoral analyses.
-
-The remainder of this paper is structured as follows: .......
+Accurate forecasting of election outcomes is vital for several reasons. It enhances democratic engagement by informing voters about potential results, which encourages active participation in the electoral process. Furthermore, political campaigns can leverage these forecasts to tailor their strategies, optimize resource allocation, and concentrate efforts on pivotal swing states that may determine the election's outcome. Analyzing polling data also reveals trends in voter sentiment, providing valuable insights into the electorate's priorities and concerns that can inform policy discussions. Ultimately, the findings from this study can improve the accuracy of predictions in a political landscape characterized by rapid change and polarization, thereby enhancing the relevance and reliability of electoral analyses. 
 
 
 # Data {#sec-data}
