--- a/paper/references.bib
+++ b/paper/references.bib
@@ -79,3 +79,11 @@
     url = {https://abcnews.go.com/538/538s-pollster-ratings-work/story?id=105398138},
     note = {Accessed: 2024-11-04}
 }
+
+@Article{citeScientificAmerican,
+  author = {{Scientific American}},
+  title = {How Can a Poll of Only 100 People Be Accurate?},
+  year = {2004},
+  url = {https://www.scientificamerican.com/article/howcan-a-poll-of-only-100/},
+  note = {Accessed: 2024-11-04}
+}
